--- a/src/Panama.Controls/Themes/Generic.xaml
+++ b/src/Panama.Controls/Themes/Generic.xaml
@@ -9,6 +9,7 @@
         <ResourceDictionary Source="pack://application:,,,/Panama.Controls;component/Themes/Generic/TagSelectorItem.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/Panama.Controls;component/Themes/Generic/SplitterGrid.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/Panama.Controls;component/Themes/Generic/MonthDaySelector.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/Panama.Controls;component/Themes/Generic/TitledSeparator.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
 </ResourceDictionary>
