--- a/src/Panama/Resources/Dictionary/Panel.xaml
+++ b/src/Panama/Resources/Dictionary/Panel.xaml
@@ -80,6 +80,12 @@
 
     <Style TargetType="StatusBar" BasedOn="{StaticResource DefaultStatusBarStyle}"/>
 
+    <Style x:Key="ToolStatusBarStyle" TargetType="StatusBar" BasedOn="{StaticResource DefaultStatusBarStyle}">
+        <Setter Property="MinHeight" Value="24"/>
+        <Setter Property="Padding" Value="0"/>
+        <Setter Property="Background" Value="{StaticResource DefaultBackgroundBrush}"/>
+    </Style>
+
     <Style TargetType="Separator" x:Key="{x:Static StatusBar.SeparatorStyleKey}">
         <Setter Property="Width" Value="1"/>
         <Setter Property="Margin" Value="3"/>
