Separate window reset
Window reset sets the window back to its default size. Make the resets of the main window and the tool window separate.

--- a/src/Panama/View/MainWindow.xaml
+++ b/src/Panama/View/MainWindow.xaml
@@ -77,10 +77,10 @@
                     Command="{Binding Commands[NavigateSearch]}"/>
 
                 <MenuItem
-                    Header="{x:Static r:Strings.MenuItemResetWindows}"
+                    Header="{x:Static r:Strings.MenuItemResetWindow}"
                     Icon="{StaticResource SquareSmallGrayIconKey}"
                     Command="{Binding Commands[ResetWindow]}"
-                    ToolTip="{x:Static r:Strings.ToolTipResetWindows}"/>
+                    ToolTip="{x:Static r:Strings.ToolTipResetWindow}"/>
             </MenuItem>
             <MenuItem Header="_Help">
                 <MenuItem
