--- a/src/Panama/View/Other/TagView.xaml
+++ b/src/Panama/View/Other/TagView.xaml
@@ -5,34 +5,33 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
-    xmlns:con="clr-namespace:Restless.Panama.Controls;assembly=Panama.Controls"
     xmlns:core="clr-namespace:Restless.Panama.Core"
     xmlns:r="clr-namespace:Restless.Panama.Resources"
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:TagViewModel}"
     mc:Ignorable="d"
     d:DesignWidth="400" d:DesignHeight="200">
-    <con:SplitterGrid
+    <tk:SplitterGrid
         MinDetailWidth="{x:Static core:Config+Grid.MinTagDetailWidth}"
         MaxDetailWidth="{x:Static core:Config+Grid.MaxTagDetailWidth}"
         IsDetailExpanded="{Binding Config.TagDetailExpanded}"
         DetailWidth="{Binding Config.TagDetailWidth}">
 
-        <con:SplitterGrid.HeaderLeft>
+        <tk:SplitterGrid.HeaderLeft>
             <StatusBar>
                 <TextBlock Text="{x:Static r:Strings.MenuItemTags}"/>
                 <!-- no filters for now -->
             </StatusBar>           
-        </con:SplitterGrid.HeaderLeft>
+        </tk:SplitterGrid.HeaderLeft>
 
-        <con:SplitterGrid.HeaderRight>
+        <tk:SplitterGrid.HeaderRight>
             <StatusBar>
                 <TextBlock
                     Style="{StaticResource TitleDisplayTextBlockStyle}"
                     Text="{Binding SelectedTag.Tag}"/>
             </StatusBar>
-        </con:SplitterGrid.HeaderRight>
+        </tk:SplitterGrid.HeaderRight>
 
-        <con:SplitterGrid.ContentLeft>
+        <tk:SplitterGrid.ContentLeft>
             <tk:DataGrid
                 RowHeight="{Binding Config.DataGridRowHeight}"
                 ItemsSource="{Binding ListView}" 
@@ -44,9 +43,9 @@
                 </DataGrid.ContextMenu>
                 
             </tk:DataGrid>            
-        </con:SplitterGrid.ContentLeft>
+        </tk:SplitterGrid.ContentLeft>
 
-        <con:SplitterGrid.ContentRight>
+        <tk:SplitterGrid.ContentRight>
             <StackPanel 
                 Style="{StaticResource DataEntryPanelStyle}"
                 Visibility="{Binding EditVisibility}">
@@ -57,6 +56,6 @@
                 <TextBox Text="{Binding SelectedTag.Description}"/>
                 
             </StackPanel>
-        </con:SplitterGrid.ContentRight>
-    </con:SplitterGrid>
+        </tk:SplitterGrid.ContentRight>
+    </tk:SplitterGrid>
 </UserControl>
