--- a/src/Panama/View/Other/AlertView.xaml
+++ b/src/Panama/View/Other/AlertView.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
-    xmlns:con="clr-namespace:Restless.Panama.Controls;assembly=Panama.Controls"
     xmlns:core="clr-namespace:Restless.Panama.Core"
     xmlns:r="clr-namespace:Restless.Panama.Resources"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -12,28 +11,28 @@
     d:DataContext="{d:DesignInstance Type=vm:AlertViewModel}"
     mc:Ignorable="d"
     d:DesignWidth="300" d:DesignHeight="400">
-    <con:SplitterGrid
+    <tk:SplitterGrid
         MinDetailWidth="{x:Static core:Config+Grid.MinAlertDetailWidth}"
         MaxDetailWidth="{x:Static core:Config+Grid.MaxAlertDetailWidth}"
         IsDetailExpanded="{Binding Config.AlertDetailExpanded}"
         DetailWidth="{Binding Config.AlertDetailWidth}">
 
-        <con:SplitterGrid.HeaderLeft>
+        <tk:SplitterGrid.HeaderLeft>
             <StatusBar>
                 <TextBlock Text="{x:Static r:Strings.MenuItemAlerts}"/>
                 <!-- no filters for now -->
             </StatusBar>
-        </con:SplitterGrid.HeaderLeft>
+        </tk:SplitterGrid.HeaderLeft>
 
-        <con:SplitterGrid.HeaderRight>
+        <tk:SplitterGrid.HeaderRight>
             <StatusBar>
                 <TextBlock
                     Style="{StaticResource TitleDisplayTextBlockStyle}"
                     Text="{Binding SelectedAlert.Title}"/>
             </StatusBar>
-        </con:SplitterGrid.HeaderRight>
+        </tk:SplitterGrid.HeaderRight>
 
-        <con:SplitterGrid.ContentLeft>
+        <tk:SplitterGrid.ContentLeft>
             <tk:DataGrid
                 RowHeight="{Binding Config.DataGridRowHeight}"
                 ItemsSource="{Binding ListView}"
@@ -45,9 +44,9 @@
                 </DataGrid.ContextMenu>
                 
             </tk:DataGrid>            
-        </con:SplitterGrid.ContentLeft>
+        </tk:SplitterGrid.ContentLeft>
 
-        <con:SplitterGrid.ContentRight>
+        <tk:SplitterGrid.ContentRight>
             <StackPanel
                 Style="{StaticResource DataEntryPanelStyle}"
                 Visibility="{Binding EditVisibility}">
@@ -72,7 +71,7 @@
                     Content="{x:Static r:Strings.TextEnabled}"/>
 
             </StackPanel>
-        </con:SplitterGrid.ContentRight>
+        </tk:SplitterGrid.ContentRight>
 
-    </con:SplitterGrid>
+    </tk:SplitterGrid>
 </UserControl>
