--- a/src/Panama/View/Other/AuthorView.xaml
+++ b/src/Panama/View/Other/AuthorView.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
-    xmlns:con="clr-namespace:Restless.Panama.Controls;assembly=Panama.Controls"
     xmlns:core="clr-namespace:Restless.Panama.Core"
     xmlns:r="clr-namespace:Restless.Panama.Resources"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,28 +10,28 @@
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:AuthorViewModel}"
     mc:Ignorable="d"
     d:DesignWidth="360" d:DesignHeight="200">
-    <con:SplitterGrid
+    <tk:SplitterGrid
         MinDetailWidth="{x:Static core:Config+Grid.MinAuthorDetailWidth}"
         MaxDetailWidth="{x:Static core:Config+Grid.MaxAuthorDetailWidth}"
         IsDetailExpanded="{Binding Config.AuthorDetailExpanded}"
         DetailWidth="{Binding Config.AuthorDetailWidth}">
 
-        <con:SplitterGrid.HeaderLeft>
+        <tk:SplitterGrid.HeaderLeft>
             <StatusBar>
                 <TextBlock Text="{x:Static r:Strings.MenuItemAuthors}"/>
                 <!-- no filters for now -->
             </StatusBar>           
-        </con:SplitterGrid.HeaderLeft>
+        </tk:SplitterGrid.HeaderLeft>
 
-        <con:SplitterGrid.HeaderRight>
+        <tk:SplitterGrid.HeaderRight>
             <StatusBar>
                 <TextBlock
                     Style="{StaticResource TitleDisplayTextBlockStyle}"
                     Text="{Binding SelectedAuthor.Name}"/>
             </StatusBar>
-        </con:SplitterGrid.HeaderRight>
+        </tk:SplitterGrid.HeaderRight>
 
-        <con:SplitterGrid.ContentLeft>
+        <tk:SplitterGrid.ContentLeft>
             <tk:DataGrid
                 ItemsSource="{Binding ListView}"
                 SelectedItem="{Binding SelectedItem}"
@@ -43,9 +42,9 @@
                 </DataGrid.ContextMenu>
 
             </tk:DataGrid>
-        </con:SplitterGrid.ContentLeft>
+        </tk:SplitterGrid.ContentLeft>
 
-        <con:SplitterGrid.ContentRight>
+        <tk:SplitterGrid.ContentRight>
             <StackPanel 
                 Style="{StaticResource DataEntryPanelStyle}"
                 Visibility="{Binding EditVisibility}">
@@ -55,7 +54,7 @@
                 <CheckBox IsChecked="{Binding SelectedAuthor.IsDefault}" Content="Default author"/>
                 
             </StackPanel>            
-        </con:SplitterGrid.ContentRight>
+        </tk:SplitterGrid.ContentRight>
 
-    </con:SplitterGrid>
+    </tk:SplitterGrid>
 </UserControl>
