--- a/src/Panama/View/Other/LinkView.xaml
+++ b/src/Panama/View/Other/LinkView.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
-    xmlns:con="clr-namespace:Restless.Panama.Controls;assembly=Panama.Controls"
     xmlns:core="clr-namespace:Restless.Panama.Core"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -12,28 +11,28 @@
     mc:Ignorable="d"
     d:DesignWidth="500" d:DesignHeight="300">
 
-    <con:SplitterGrid
+    <tk:SplitterGrid
         MinDetailWidth="{x:Static core:Config+Grid.MinLinkDetailWidth}"
         MaxDetailWidth="{x:Static core:Config+Grid.MaxLinkDetailWidth}"
         IsDetailExpanded="{Binding Config.LinkDetailExpanded}"
         DetailWidth="{Binding Config.LinkDetailWidth}">
         
-        <con:SplitterGrid.HeaderLeft>
+        <tk:SplitterGrid.HeaderLeft>
             <StatusBar>
                 <TextBlock Text="Links"/>
                 <!-- no filters for now -->
             </StatusBar>
-        </con:SplitterGrid.HeaderLeft>
+        </tk:SplitterGrid.HeaderLeft>
 
-        <con:SplitterGrid.HeaderRight>
+        <tk:SplitterGrid.HeaderRight>
             <StatusBar>
                 <TextBlock
                     Style="{StaticResource TitleDisplayTextBlockStyle}"
                     Text="{Binding SelectedLink.Name}"/>
             </StatusBar>
-        </con:SplitterGrid.HeaderRight>
+        </tk:SplitterGrid.HeaderRight>
 
-        <con:SplitterGrid.ContentLeft>
+        <tk:SplitterGrid.ContentLeft>
             <tk:DataGrid
                 RowHeight="{Binding Config.DataGridRowHeight}"
                 ItemsSource="{Binding ListView}"
@@ -49,9 +48,9 @@
                 </DataGrid.ContextMenu>
 
             </tk:DataGrid>
-        </con:SplitterGrid.ContentLeft>
+        </tk:SplitterGrid.ContentLeft>
 
-        <con:SplitterGrid.ContentRight>
+        <tk:SplitterGrid.ContentRight>
             <StackPanel 
                 Style="{StaticResource DataEntryPanelStyle}"
                 Visibility="{Binding EditVisibility}">
@@ -62,7 +61,7 @@
                 <TextBlock Text="Note"/>
                 <TextBox Text="{Binding SelectedLink.Notes}"/>
             </StackPanel>
-        </con:SplitterGrid.ContentRight>
+        </tk:SplitterGrid.ContentRight>
 
-    </con:SplitterGrid>
+    </tk:SplitterGrid>
 </UserControl>
