--- a/src/Panama/View/Other/UserNoteView.xaml
+++ b/src/Panama/View/Other/UserNoteView.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
-    xmlns:con="clr-namespace:Restless.Panama.Controls;assembly=Panama.Controls"
     xmlns:core="clr-namespace:Restless.Panama.Core"
     xmlns:r="clr-namespace:Restless.Panama.Resources"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -12,28 +11,28 @@
     d:DataContext="{d:DesignInstance Type=vm:UserNoteViewModel}"
     mc:Ignorable="d"
     d:DesignWidth="860" d:DesignHeight="500">
-    <con:SplitterGrid
+    <tk:SplitterGrid
         MinDetailWidth="{x:Static core:Config+Grid.MinNoteDetailWidth}"
         MaxDetailWidth="{x:Static core:Config+Grid.MaxNoteDetailWidth}"
         IsDetailExpanded="{Binding Config.NoteDetailExpanded}"
         DetailWidth="{Binding Config.NoteDetailWidth}">
 
-        <con:SplitterGrid.HeaderLeft>
+        <tk:SplitterGrid.HeaderLeft>
             <StatusBar>
                 <TextBlock Text="{x:Static r:Strings.TextNotes}"/>
                 <!-- no filters for now -->                
             </StatusBar>
-        </con:SplitterGrid.HeaderLeft>
+        </tk:SplitterGrid.HeaderLeft>
 
-        <con:SplitterGrid.HeaderRight>
+        <tk:SplitterGrid.HeaderRight>
             <StatusBar>
                 <TextBlock
                     Style="{StaticResource TitleDisplayTextBlockStyle}"
                     Text="{Binding SelectedNote.Title}"/>                
             </StatusBar>
-        </con:SplitterGrid.HeaderRight>
+        </tk:SplitterGrid.HeaderRight>
         
-        <con:SplitterGrid.ContentLeft>
+        <tk:SplitterGrid.ContentLeft>
             <tk:DataGrid
                 RowHeight="{Binding Config.DataGridRowHeight}"
                 ItemsSource="{Binding ListView}"
@@ -45,9 +44,9 @@
                 </DataGrid.ContextMenu>
                 
             </tk:DataGrid>
-        </con:SplitterGrid.ContentLeft>
+        </tk:SplitterGrid.ContentLeft>
 
-        <con:SplitterGrid.ContentRight>
+        <tk:SplitterGrid.ContentRight>
             <DockPanel
                 tk:Property.DefaultDock="Top"
                 Style="{StaticResource DataEntryPanelStyle}"
@@ -61,8 +60,8 @@
                     Text="{Binding SelectedNote.Note}"/>
                 
             </DockPanel>
-        </con:SplitterGrid.ContentRight>
+        </tk:SplitterGrid.ContentRight>
         
-    </con:SplitterGrid>
+    </tk:SplitterGrid>
 
 </UserControl>
