--- a/src/Panama/View/Publisher/SelfPublisherView.xaml
+++ b/src/Panama/View/Publisher/SelfPublisherView.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
-    xmlns:con="clr-namespace:Restless.Panama.Controls;assembly=Panama.Controls"
     xmlns:core="clr-namespace:Restless.Panama.Core"
     xmlns:r="clr-namespace:Restless.Panama.Resources"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,28 +10,28 @@
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:SelfPublisherViewModel}"
     mc:Ignorable="d"
     d:DesignWidth="860" d:DesignHeight="400">
-    <con:SplitterGrid
+    <tk:SplitterGrid
         MinDetailWidth="{x:Static core:Config+Grid.MinSelfPublisherDetailWidth}"
         MaxDetailWidth="{x:Static core:Config+Grid.MaxSelfPublisherDetailWidth}"
         IsDetailExpanded="{Binding Config.SelfPublisherDetailExpanded}"
         DetailWidth="{Binding Config.SelfPublisherDetailWidth}">
 
-        <con:SplitterGrid.HeaderLeft>
+        <tk:SplitterGrid.HeaderLeft>
             <StatusBar>
                 <TextBlock Text="Self publishers"/>
                 <!-- no filters for now -->
             </StatusBar>
-        </con:SplitterGrid.HeaderLeft>
+        </tk:SplitterGrid.HeaderLeft>
 
-        <con:SplitterGrid.HeaderRight>
+        <tk:SplitterGrid.HeaderRight>
             <StatusBar>
                 <TextBlock
                     Style="{StaticResource TitleDisplayTextBlockStyle}"
                     Text="{Binding SelectedPublisher.Name}"/>
             </StatusBar>
-        </con:SplitterGrid.HeaderRight>
+        </tk:SplitterGrid.HeaderRight>
 
-        <con:SplitterGrid.ContentLeft>
+        <tk:SplitterGrid.ContentLeft>
             <tk:DataGrid
                 CanUserReorderColumns="True"
                 HeaderMode="ColumnSelector"
@@ -51,9 +50,9 @@
                     <ContextMenu ItemsSource="{Binding MenuItems}"/>
                 </DataGrid.ContextMenu>
             </tk:DataGrid>            
-        </con:SplitterGrid.ContentLeft>
+        </tk:SplitterGrid.ContentLeft>
 
-        <con:SplitterGrid.ContentRight>
+        <tk:SplitterGrid.ContentRight>
 
             <StackPanel 
                 Style="{StaticResource DataEntryPanelStyle}"
@@ -71,7 +70,7 @@
                     Text="{Binding SelectedPublisher.Notes}"/>
             </StackPanel>
             
-        </con:SplitterGrid.ContentRight>
+        </tk:SplitterGrid.ContentRight>
         
-    </con:SplitterGrid>
+    </tk:SplitterGrid>
 </UserControl>
