--- a/src/Panama/View/Submission/SubmissionView.xaml
+++ b/src/Panama/View/Submission/SubmissionView.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
-    xmlns:con="clr-namespace:Restless.Panama.Controls;assembly=Panama.Controls"
     xmlns:core="clr-namespace:Restless.Panama.Core"
     xmlns:vw="clr-namespace:Restless.Panama.View"
     xmlns:r="clr-namespace:Restless.Panama.Resources"
@@ -13,13 +12,13 @@
     d:DataContext="{d:DesignInstance Type=vm:SubmissionViewModel}"
     mc:Ignorable="d"
     d:DesignWidth="860" d:DesignHeight="400">
-    <con:SplitterGrid
+    <tk:SplitterGrid
         MinDetailWidth="{x:Static core:Config+Grid.MinSubmissionDetailWidth}"
         MaxDetailWidth="{x:Static core:Config+Grid.MaxSubmissionDetailWidth}"
         IsDetailExpanded="{Binding Config.SubmissionDetailExpanded}"
         DetailWidth="{Binding Config.SubmissionDetailWidth}">
 
-        <con:SplitterGrid.HeaderLeft>
+        <tk:SplitterGrid.HeaderLeft>
             <StatusBar>
                 <TextBlock Text="Filters"/>
                 <Button
@@ -63,9 +62,9 @@
                     Foreground="{StaticResource DarkAlertForegroundBrush}"
                     Text="(row filter in effect)"/>
             </StatusBar>
-        </con:SplitterGrid.HeaderLeft>
+        </tk:SplitterGrid.HeaderLeft>
 
-        <con:SplitterGrid.HeaderRight>
+        <tk:SplitterGrid.HeaderRight>
             <StatusBar>
                 <TextBlock 
                     Style="{StaticResource TitleDisplayTextBlockStyle}"
@@ -79,9 +78,9 @@
                     tk:Property.IsVisible="{Binding SelectedBatch.IsLocked, FallbackValue=False}"
                     Text="{x:Static r:Strings.TextLocked}"/>
             </StatusBar>
-        </con:SplitterGrid.HeaderRight>
+        </tk:SplitterGrid.HeaderRight>
 
-        <con:SplitterGrid.ContentLeft>
+        <tk:SplitterGrid.ContentLeft>
             <tk:DataGrid
                 CanUserReorderColumns="True"
                 HeaderMode="ColumnSelector"
@@ -96,12 +95,12 @@
                 </DataGrid.ContextMenu>
                 
             </tk:DataGrid>
-        </con:SplitterGrid.ContentLeft>
+        </tk:SplitterGrid.ContentLeft>
 
-        <con:SplitterGrid.ContentRight>
+        <tk:SplitterGrid.ContentRight>
             <vw:SubmissionEditContainer Visibility="{Binding EditVisibility}"/>
-        </con:SplitterGrid.ContentRight>
+        </tk:SplitterGrid.ContentRight>
 
-    </con:SplitterGrid>
+    </tk:SplitterGrid>
 
 </UserControl>
