--- a/src/Panama/View/Title/TitleView.xaml
+++ b/src/Panama/View/Title/TitleView.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
-    xmlns:con="clr-namespace:Restless.Panama.Controls;assembly=Panama.Controls"
     xmlns:core="clr-namespace:Restless.Panama.Core"
     xmlns:r="clr-namespace:Restless.Panama.Resources"
     xmlns:vw="clr-namespace:Restless.Panama.View"
@@ -13,13 +12,13 @@
     mc:Ignorable="d"
     d:DesignWidth="860" d:DesignHeight="355">
     
-    <con:SplitterGrid
+    <tk:SplitterGrid
         MinDetailWidth="{x:Static core:Config+Grid.MinTitleDetailWidth}"
         MaxDetailWidth="{x:Static core:Config+Grid.MaxTitleDetailWidth}"
         IsDetailExpanded="{Binding Config.TitleDetailExpanded}"
         DetailWidth="{Binding Config.TitleDetailWidth}">
 
-        <con:SplitterGrid.HeaderLeft>
+        <tk:SplitterGrid.HeaderLeft>
             <StatusBar>
                 <TextBlock Text="Filters"/>
                 <Button 
@@ -78,17 +77,17 @@
                     StaysOpen="False" />
                 
             </StatusBar>
-        </con:SplitterGrid.HeaderLeft>
+        </tk:SplitterGrid.HeaderLeft>
 
-        <con:SplitterGrid.HeaderRight>
+        <tk:SplitterGrid.HeaderRight>
             <StatusBar>
                 <TextBlock 
                     Style="{StaticResource TitleDisplayTextBlockStyle}"
                     Text="{Binding SelectedTitle.Title}"/>
             </StatusBar>
-        </con:SplitterGrid.HeaderRight>
+        </tk:SplitterGrid.HeaderRight>
 
-        <con:SplitterGrid.ContentLeft>
+        <tk:SplitterGrid.ContentLeft>
             <tk:DataGrid
                 CanUserReorderColumns="True"
                 HeaderMode="ColumnSelector"
@@ -108,11 +107,11 @@
                 </DataGrid.ContextMenu>
 
             </tk:DataGrid>            
-        </con:SplitterGrid.ContentLeft>
+        </tk:SplitterGrid.ContentLeft>
 
-        <con:SplitterGrid.ContentRight>
+        <tk:SplitterGrid.ContentRight>
             <vw:TitleEditContainer Visibility="{Binding EditVisibility}"/>
-        </con:SplitterGrid.ContentRight>
+        </tk:SplitterGrid.ContentRight>
 
-    </con:SplitterGrid>
+    </tk:SplitterGrid>
 </UserControl>
