--- a/src/Panama/View/Tool/TableView.xaml
+++ b/src/Panama/View/Tool/TableView.xaml
@@ -3,9 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
-    xmlns:con="clr-namespace:Restless.Panama.Controls;assembly=Panama.Controls"
     xmlns:core="clr-namespace:Restless.Panama.Core"
-    xmlns:r="clr-namespace:Restless.Panama.Resources"
     xmlns:vw="clr-namespace:Restless.Panama.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -13,41 +11,41 @@
     d:DataContext="{d:DesignInstance Type=vm:TableViewModel}"
     mc:Ignorable="d"
     d:DesignWidth="860" d:DesignHeight="400">
-    <con:SplitterGrid
+    <tk:SplitterGrid
         MinDetailWidth="{x:Static core:Config+Grid.MinTableDetailWidth}"
         MaxDetailWidth="{x:Static core:Config+Grid.MaxTableDetailWidth}"
         IsDetailExpanded="{Binding Config.TableDetailExpanded}"
         DetailWidth="{Binding Config.TableDetailWidth}">
 
-        <con:SplitterGrid.Resources>
+        <tk:SplitterGrid.Resources>
             <Style TargetType="DataGrid" BasedOn="{StaticResource DataGridEditLockedStretchedStyle}">
                 <Setter Property="RowHeight" Value="28"/>
             </Style>
-        </con:SplitterGrid.Resources>
+        </tk:SplitterGrid.Resources>
 
-        <con:SplitterGrid.HeaderLeft>
+        <tk:SplitterGrid.HeaderLeft>
             <StatusBar/>
-        </con:SplitterGrid.HeaderLeft>
+        </tk:SplitterGrid.HeaderLeft>
 
-        <con:SplitterGrid.HeaderRight>
+        <tk:SplitterGrid.HeaderRight>
             <StatusBar>
                 <TextBlock 
                     Style="{StaticResource TitleDisplayTextBlockStyle}"
                     Text="{Binding SelectedTable.TableName}"/>
             </StatusBar>
-        </con:SplitterGrid.HeaderRight>
+        </tk:SplitterGrid.HeaderRight>
 
-        <con:SplitterGrid.ContentLeft>
+        <tk:SplitterGrid.ContentLeft>
             <tk:DataGrid
                 ItemsSource="{Binding ListView}"
                 SelectedItem="{Binding SelectedItem}"
                 tk:DataGridColumns.Columns="{Binding Columns}"/>
 
-        </con:SplitterGrid.ContentLeft>
+        </tk:SplitterGrid.ContentLeft>
 
-        <con:SplitterGrid.ContentRight>
+        <tk:SplitterGrid.ContentRight>
             <vw:TableDetail Visibility="{Binding EditVisibility}"/>
-        </con:SplitterGrid.ContentRight>
+        </tk:SplitterGrid.ContentRight>
         
-    </con:SplitterGrid>
+    </tk:SplitterGrid>
 </UserControl>
