--- a/src/Panama/View/Tool/TableView.xaml
+++ b/src/Panama/View/Tool/TableView.xaml
@@ -5,6 +5,7 @@
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
     xmlns:core="clr-namespace:Restless.Panama.Core"
     xmlns:vw="clr-namespace:Restless.Panama.View"
+    xmlns:r="clr-namespace:Restless.Panama.Resources"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel"
@@ -24,7 +25,9 @@
         </tk:SplitterGrid.Resources>
 
         <tk:SplitterGrid.HeaderLeft>
-            <StatusBar/>
+            <StatusBar>
+                <TextBlock Text="{x:Static r:Strings.HeaderTables}"/>
+            </StatusBar>
         </tk:SplitterGrid.HeaderLeft>
 
         <tk:SplitterGrid.HeaderRight>
