--- a/src/Panama/View/Tool/ToolWindow.xaml
+++ b/src/Panama/View/Tool/ToolWindow.xaml
@@ -138,9 +138,10 @@
                 tk:Property.IsLongVisibleValue="5">
 
                 <vw:ToolDetail
-                    Mode="Bare"
+                    Mode="TextOutput"
                     ExplanationText="{x:Static r:Strings.ToolMessageDetail}"
                     FolderDisplay="{Binding Config.FolderSubmissionMessage}"
+                    OutputText="{Binding Adapter.OutputText[4]}"
                     StatusText="{Binding Adapter.Status[4]}"
                     Command="{Binding Commands[RunMessageSync]}"/>
                 
