Basics of queue data / view

--- a/src/Panama/Resources/Dictionary/DataTemplate.xaml
+++ b/src/Panama/Resources/Dictionary/DataTemplate.xaml
@@ -52,7 +52,11 @@
     <DataTemplate DataType="{x:Type vm:TitleViewModel}">
         <vw:TitleView />
     </DataTemplate>
-    
+
+    <DataTemplate DataType="{x:Type vm:TitleQueueViewModel}">
+        <vw:TitleQueueView />
+    </DataTemplate>
+
     <DataTemplate DataType="{x:Type vm:ToolConvertViewModel}">
         <vw:ToolConvertView />
     </DataTemplate>
