--- a/src/Panama/View/Title/TitleQueueView.xaml
+++ b/src/Panama/View/Title/TitleQueueView.xaml
@@ -8,7 +8,7 @@
     xmlns:vw="clr-namespace:Restless.Panama.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:TitleViewModel}"
+    xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:TitleQueueViewModel}"
     mc:Ignorable="d"
     d:DesignWidth="860" d:DesignHeight="355">
 
@@ -21,10 +21,10 @@
         <ListBox
             Grid.Row="1"
             BorderThickness="0,0,0,0"
-            ItemsSource="{Binding Sections}"
-            DisplayMemberPath="Name"
-            SelectedItem="{Binding SelectedSection}"/>
-
+            ItemsSource="{Binding Queues}"
+            DisplayMemberPath="name"
+            SelectedValue="{Binding SelectedQueueId}"
+            SelectedValuePath="id"/>
 
         <tk:SplitterGrid
             Grid.Column="1"
@@ -35,7 +35,11 @@
             DetailWidth="{Binding Config.TitleQueueDetailWidth}">
 
             <tk:SplitterGrid.HeaderLeft>
-                <StatusBar Margin="4,0,0,0">Titles</StatusBar>
+                <StatusBar Margin="4,0,0,0">
+                    <TextBlock 
+                        Style="{StaticResource TitleDisplayTextBlockStyle}"
+                        Text="{Binding SelectedQueueName}"/>
+                </StatusBar>
             </tk:SplitterGrid.HeaderLeft>
 
             <tk:SplitterGrid.HeaderRight>
@@ -57,10 +61,6 @@
                     RestoreStateBehavior="RestoreLastSelection"
                     tk:DataGridColumns.Columns="{Binding Columns}">
 
-                    <DataGrid.InputBindings>
-                        <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding OpenRowCommand}"/>
-                    </DataGrid.InputBindings>
-
                     <DataGrid.ContextMenu>
                         <ContextMenu ItemsSource="{Binding MenuItems}"/>
                     </DataGrid.ContextMenu>
@@ -68,9 +68,9 @@
                 </tk:DataGrid>
             </tk:SplitterGrid.ContentLeft>
 
-            <tk:SplitterGrid.ContentRight>
-                <vw:TitleEditContainer Visibility="{Binding EditVisibility}"/>
-            </tk:SplitterGrid.ContentRight>
+            <!--<tk:SplitterGrid.ContentRight>-->
+                <!--<vw:TitleEditContainer Visibility="{Binding EditVisibility}"/>-->
+            <!--</tk:SplitterGrid.ContentRight>-->
 
         </tk:SplitterGrid>
 
