--- a/src/Panama/View/Title/TitleQueueView.xaml
+++ b/src/Panama/View/Title/TitleQueueView.xaml
@@ -20,7 +20,8 @@
 
         <ListBox
             Grid.Row="1"
-            BorderThickness="0,0,0,0"
+            Margin="0,10"
+            BorderThickness="0"
             ItemsSource="{Binding Queues}"
             DisplayMemberPath="Name"
             SelectedItem="{Binding SelectedQueue}">
@@ -42,7 +43,17 @@
                 <StatusBar Margin="4,0,0,0">
                     <TextBlock 
                         Style="{StaticResource TitleDisplayTextBlockStyle}"
+                        tk:Property.IsCollapsed="{Binding QueueEditMode}"
                         Text="{Binding SelectedQueue.Name}"/>
+                    <TextBox
+                        Width="240"
+                        tk:Property.IsVisible="{Binding QueueEditMode}"
+                        Text="{Binding SelectedQueue.Name}"/>
+                    <Button
+                        Content="Close"
+                        Command="{Binding Commands[CloseQueueEdit]}"
+                        tk:Property.IsVisible="{Binding QueueEditMode}"/>
+
                 </StatusBar>
             </tk:SplitterGrid.HeaderLeft>
 
