Adjust padding when renaming queue
Set the padding to zero when renaming to prevent the status bar from changing its size, pushing other pieces down.

--- a/src/Panama/View/Title/TitleQueueView.xaml
+++ b/src/Panama/View/Title/TitleQueueView.xaml
@@ -40,7 +40,7 @@
             DetailWidth="{Binding Config.TitleQueueDetailWidth}">
 
             <tk:SplitterGrid.HeaderLeft>
-                <StatusBar Margin="4,0,0,0">
+                <StatusBar Margin="4,0,0,0" Padding="{Binding StatusPadding}">
                     <TextBlock 
                         Style="{StaticResource TitleDisplayTextBlockStyle}"
                         tk:Property.IsCollapsed="{Binding QueueEditMode}"
