Edit queue item basics

--- a/src/Panama/View/Title/TitleQueueView.xaml
+++ b/src/Panama/View/Title/TitleQueueView.xaml
@@ -83,9 +83,9 @@
                 </tk:DataGrid>
             </tk:SplitterGrid.ContentLeft>
 
-            <!--<tk:SplitterGrid.ContentRight>-->
-                <!--<vw:TitleEditContainer Visibility="{Binding EditVisibility}"/>-->
-            <!--</tk:SplitterGrid.ContentRight>-->
+            <tk:SplitterGrid.ContentRight>
+                <vw:TitleQueueEdit Visibility="{Binding EditVisibility}"/>
+            </tk:SplitterGrid.ContentRight>
 
         </tk:SplitterGrid>
 
