--- a/src/Panama/Resources/Dictionary/DataGrid.xaml
+++ b/src/Panama/Resources/Dictionary/DataGrid.xaml
@@ -2,6 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
+    xmlns:table="clr-namespace:Restless.Panama.Database.Tables;assembly=Panama.Database"
     xmlns:core="clr-namespace:Restless.Panama.Core">
 
     <Style x:Key="TitleConfirmDataGridRowStyle" TargetType="DataGridRow">
@@ -11,6 +12,17 @@
             </DataTrigger>
             <DataTrigger Binding="{Binding Status}" Value="Exclusive">
                 <Setter Property="Foreground" Value="{StaticResource AlertForegroundBrush}"/>
+            </DataTrigger>            
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="QueueTitleDataGridRowStyle" TargetType="DataGridRow">
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding status}" Value="{x:Static table:QueueTitleStatusTable+Defs+Values.StatusPending}">
+                <Setter Property="Foreground" Value="{StaticResource AlertForegroundBrush}"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding status}" Value="{x:Static table:QueueTitleStatusTable+Defs+Values.StatusPublished}">
+                <Setter Property="Foreground" Value="{StaticResource EnabledAlertForegroundBrush}"/>
             </DataTrigger>            
         </Style.Triggers>
     </Style>
