--- a/src/Panama/View/Title/TitleQueueView.xaml
+++ b/src/Panama/View/Title/TitleQueueView.xaml
@@ -71,6 +71,7 @@
                     HeaderMode="ColumnSelector"
                     ColumnSelectorMinimumVisible="3"
                     RowHeight="{Binding Config.DataGridRowHeight}"
+                    RowStyle="{StaticResource QueueTitleDataGridRowStyle}"
                     ItemsSource="{Binding ListView}"
                     SelectedItem="{Binding SelectedItem}"
                     RestoreStateBehavior="RestoreLastSelection"
